--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -52,7 +52,10 @@
 
     <main>
       <article class="clearfix">
-        <h1>Come creare un template per i post</h1>
+        <div id="container-h1">
+          <h1>Come creare un template per i post</h1>
+          <img src="../base_di_partenza/assets/img/underline.svg" alt="" />
+        </div>
         <p>
           <i class="fas fa-pen-square"></i> di Mario Rossi -
           <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span>
